# FastAPI_in_1h

./: .env-example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  schemas.py
bookstore/: database.py  main.py  models.py  schemas.py
bookstore/routers/: books.py
migrations/: env.py
migrations/versions/: 8bb39d81fed1_create_table_books.py
routers/: books.py
